# ai-researcher

./: .env.example  .gitignore  CLAUDE.md  README.md  api.py  db.py  graph.py  latex.py  main.py  pyproject.toml  research-notes.md  state.py  tools.py
agents/: critic.py  graph.py  outliner.py  searcher.py  shared.py  synthesizer.py  writer.py
docs/: architecture.md  tech-doc.md
static/: index.html
tests/: test_api.py  test_outliner.py  test_pipeline.py  test_searcher.py  test_synthesizer_critic.py  test_writer.py
tools/: __init__.py  pdf.py  search.py
