[project]
name = "ai-researcher"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "docling>=2.105.0",
    "httpx[socks]>=0.28.1",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
